// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar component should match the snapshot when the user is logged in 1`] = `
<nav
  class="MuiGrid-root makeStyles-container-1 MuiGrid-container MuiGrid-direction-xs-column"
>
  <a
    class="makeStyles-link-2"
    href="/login"
  />
  <a
    class="makeStyles-link-2"
    href="/"
  >
    <div
      class="MuiListItemText-root makeStyles-listItems-3"
      style="background-color: rgb(51, 51, 51); color: white;"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Veículos
      </span>
    </div>
  </a>
  <a
    class="makeStyles-link-2"
    href="/marcas"
  >
    <div
      class="MuiListItemText-root makeStyles-listItems-3"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Marcas
      </span>
    </div>
  </a>
  <a
    class="makeStyles-link-2"
    href="/usuarios"
  >
    <div
      class="MuiListItemText-root makeStyles-listItems-3"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Usuários
      </span>
    </div>
  </a>
  <a
    class="makeStyles-link-2"
    href="/dashboard"
  >
    <div
      class="MuiListItemText-root makeStyles-listItems-3"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Dashboard
      </span>
    </div>
  </a>
  <div
    class="MuiListItemText-root makeStyles-listItems-3"
  >
    <span
      class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
    >
      Sair
    </span>
  </div>
</nav>
`;

exports[`Sidebar component should match the snapshot when the user is logged out 1`] = `
<nav
  class="MuiGrid-root makeStyles-container-4 MuiGrid-container MuiGrid-direction-xs-column"
>
  <a
    class="makeStyles-link-5"
    href="/login"
  >
    <div
      class="MuiListItemText-root makeStyles-listItems-6"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Entrar
      </span>
    </div>
  </a>
  <a
    class="makeStyles-link-5"
    href="/"
  >
    <div
      class="MuiListItemText-root makeStyles-listItems-6"
      style="background-color: rgb(51, 51, 51); color: white;"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Veículos
      </span>
    </div>
  </a>
  <a
    class="makeStyles-link-5"
    href="/marcas"
  />
  <a
    class="makeStyles-link-5"
    href="/usuarios"
  />
  <a
    class="makeStyles-link-5"
    href="/dashboard"
  />
</nav>
`;
